# xarm-moveit

./: .setup_assistant  CMakeLists.txt  LICENSE  README.md  controller_plugins.xml  package.xml
config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  xArm.ros2_control.xacro  xArm.srdf  xArm.urdf.xacro
include/xarm_control/: scaled_joint_trajectory_controller.hpp  speed_scaling_state_broadcaster.hpp
include/xarm_controllers/: scaled_joint_trajectory_controller.hpp
launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/: scaled_joint_trajectory_controller.cpp  scaled_joint_trajectory_controller_parameters.yaml  speed_scaling_state_broadcaster.cpp
